chore: added body for the blog post details

--- a/frontend/blog-details.html
+++ b/frontend/blog-details.html
@@ -27,19 +27,12 @@
                 <!-- Blog Post Section -->
                 <section>
                     <h2 class="text-xl font-semibold">Blog Post Details</h2>
-                    <div class="space-y-4">
-                        <div class="border border-gray-300 p-4 rounded-lg">
-                            <h3 class="text-lg font-semibold">Blog Post Title 1</h3>
-                            <p>This is the content of the blog post...</p>
-                        </div>
-                        <div class="border border-gray-300 p-4 rounded-lg">
-                            <h3 class="text-lg font-semibold">Blog Post Title 2</h3>
-                            <p>This is the content of the blog post...</p>
-                        </div>
-                        <div class="border border-gray-300 p-4 rounded-lg">
-                            <h3 class="text-lg font-semibold">Blog Post Title 3</h3>
-                            <p>This is the content of the blog post...</p>
-                        </div>
+                    <div class="border border-gray-300 p-4 rounded-lg">
+                        <h3 class="text-lg font-semibold">Blog Post Title</h3>
+                        <p class="text-gray-700">This is the content of the blog post...</p>
+                        <hr class="my-4 border-gray-300">
+                        <h4 class="text-lg font-semibold mt-4">Youtube Title</h4>
+                        <a href="#" class="text-blue-600 hover:underline">http://www.youtube.com</a>
                     </div>
                 </section>
             </div>
